
2013-March-28 Struan Robertson

	* MolecularComponents.cpp/.h, Molecule.cpp: Units added for Hessian 
	and frequencies updated following diagonlization of Hessian.

	* examples/Butyl_H_to_Butane/Butyl_H_to_Butane.xml: Added units for
	Hessian.
	
2013-March-27 Chris Morley
	* src/MolecularComponents.cpp: transparently read hessian matrices
	with upper or lower triangle or complete. (CML files from Gaussian
	use upper triangle.)

	* examples/Butyl_H_to_Butane/Butyl_H_to_Butane.xml,
	src/MolecularComponents.cpp: in dictRref use me:hessian rather
	than me:Hessian.

2013-March-26 Struan Robertson

	* MolecularComponents.cpp/.h, HinderedRotorQM1D.cpp: Implementation 
	of Sharma, Raman and Green algorithm for the elimination of internal 
	rotational mode frequencies.
	
2013-March-19 Struan Robertson

	* MolecularComponents.cpp/.h: Hessian rotational projection added.
	
2013-March-11 Struan Robertson

	* MolecularComponents.cpp/.h: Utility methods added to gStructure class.
	
2013-March-07 Struan Robertson

	* MolecularComponents.cpp/.h, HinderedRotorQM1D.cpp : Infrastructure to
	project internal rotor modes from Hessian.
	
2013-March-03 Struan Robertson

	* MolecularComponents.cpp/.h : Initial revision of method to analyse 
	a Hessain to obtain vibration frequencies.
	
2013-March-03 Struan Robertson

	* Rdouble.h/.cpp, fitting.cpp, gridsearch.cpp, Marquardt.cpp : Added methods 
	to convert fitted parameters back to original units (based on code changes 
	suggested by Robin).
	
2013-February-27 Struan Robertson

	* PriorDistribution.cpp, CollisionOperator.cpp: Minor bug fixes checked-in
	on behalf of Robin.
	
2013-February-25 Struan Robertson

	* TMatrix.h: Moved Matrix CML I/O methods from temporary class onto TMatrix.
	
2013-February-22 Chris Morley

	* src/RWmatrix.cpp,	src/RWMatrix.h: functions to read and write Hessian
	matrices to CML. These files and the RWMatrix class are temporary until
	a suitable home is found for the functions.
